[package]
edition = "2024"
name    = "image_interop"
version = "0.0.0"


[features]
default    = ["rayon", "bevy_color"]
rayon      = ["dep:rayon"]
bevy_color = ["dep:bevy_color"]


[dependencies]
anyhow     = "1.0.86"
num-traits = "0.2.19"
paste      = "1.0.15"

rayon      = { version = "1.10.0", optional = true }
bevy_color = { version = "0.15.4", optional = true }
zune-image = { version = "0.4.15", optional = true }

[lints]
workspace = true
