[package]
edition = "2024"
name    = "image_interop"
version = "0.0.0"


[features]
default = ["rayon"]
rayon   = ["dep:rayon"]
f16     = ["dep:half"]

bevy_color = ["dep:bevy_color"]
image      = ["dep:image"]


[dependencies]
anyhow     = "1.0.86"
num-traits = "0.2.19"
paste      = "1.0.15"

rayon = { version = "1.10.0", optional = true }
half  = { version = "2.4.1", features = ["num-traits"], optional = true }

bevy_color = { version = "0.15.4", optional = true }
zune-image = { version = "0.4.15", optional = true }
image      = { version = "0.25.5", optional = true }

[lints]
workspace = true
