[package]
edition = "2024"
name    = "image_interop"
version = "0.0.1"


[features]
default = ["rayon"]
f16     = ["dep:half"]
rayon   = ["dep:rayon"]

bevy_color = ["dep:bevy_color"]
image      = ["dep:image"]


[dependencies]
anyhow            = "1.0.86"
num-traits        = "0.2.19"
paste             = "1.0.15"
static_assertions = "1.1.0"

half  = { version = "2.4.1", features = ["num-traits"], optional = true }
rayon = { version = "1.10.0", optional = true }

bevy_color = { version = "0.15.4", optional = true }
image      = { version = "0.25.5", optional = true }
zune-image = { version = "0.4.15", optional = true }
